# tui-file-manager

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  TUIFMConfig.h.in  build.sh  configure.sh  generateProjects.sh  generateVisualStudioProject.bat  generateXcodeProject.sh
XCode/tui-file-manager.xcodeproj/: project.pbxproj
XCode/tui-file-manager.xcodeproj/project.xcworkspace/xcuserdata/marc.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/tui-file-manager.xcodeproj/xcuserdata/marc.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: FileManagerUI.h  FileSystem.h  Main.h  UI.h
src/: FileManagerUI.cpp  FileSystem.cpp  Main.cpp  UI.cpp
